<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Home"
            android:title="@string/home" />
        <!--android:icon="@drawable/ic_menu_camera"-->
        <item
            android:id="@+id/local_folder"
            android:title="@string/Local" />
        <!--android:icon="@drawable/ic_menu_camera"-->
        <item
            android:id="@+id/hidden_folder"
            android:title="@string/Hidden" />
            <!--android:icon="@drawable/ic_menu_gallery"-->
        <item
            android:id="@+id/wallpapers"
            android:title="@string/Wallpapers" />
        <!--android:icon="@drawable/ic_menu_slideshow"-->
        <item
            android:id="@+id/donate"
            android:title="@string/Donate" />
        <!--android:icon="@drawable/ic_menu_manage"-->
        <item
            android:id="@+id/settings"
            android:title="@string/Settings" />
        <!--android:icon="@drawable/ic_menu_slideshow"-->
        <item
            android:id="@+id/about"
            android:title="@string/About" />
        <!--android:icon="@drawable/ic_menu_manage"-->
    </group>
</menu>